# opcw_xauusd

./: .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  RUN.md  pyproject.toml  requirements.txt
configs/: default.yaml  xauusd.yaml
data/ml/: runs.csv
docs/: ARCHITECTURE.md  ARTIFACTS_SCHEMA.md  BASELINE_OPTIMIZATION_LOG.md  INSTRUCTIE_OPENCLAW_BOT.md  ML_PLAN.md  OCLW_PRINCIPLES.md  OPENCLAW_BACKTEST_LOOP.md  PLAN_LOGS_EN_SETTINGS_VOOR_ML.md  PROJECT_OVERVIEW_GPT.md  PROJECT_STATUS_GPT.md  PROJECT_TOTAL.md  SETTINGS.md  STRATEGY_BASIS.md  TELEGRAM_COMMANDS.md  TODO.md  VPS_LOOP.md  VPS_SETUP.md  WERKWIJZE.md
oclw_bot/: rules.md
oclw_bot/prompts/: improver.md  tester.md
reports/history/: baseline.json
reports/latest/: REPORT.md  llm_input.json  metrics.json  sweep_results.json
scripts/: apply_changes.py  auto_improve.py  build_ml_dataset.py  deploy_check.sh  fetch_dukascopy_xauusd.py  h1_momentum_analysis.py  mae_mfe_analysis.py  make_llm_input.py  make_report.py  multi_window_validation.py  parallel_sweep.py  rr_sweep.py  run_backtest.sh  run_backtest_to_artifacts.py  run_full_test.py  run_live.py  run_lock.py  run_tests.sh  setup_venv.py  sizing_simulation.py  telegram_listener.py  time_exit_analysis.py  vps_run.sh
src/trader/: __init__.py  app.py  config.py  logging_config.py
src/trader/backtest/: __init__.py  engine.py  (+3 more)
tests/: conftest.py  test_sqe_smoke.py
tests/integration/: test_pipeline.py
tests/performance/: test_runtime_limits.py
tests/regression/: test_baseline_guardrails.py
tests/unit/: test_indicators.py  test_ml.py
(+53 files in other folders)
